--- a/app/src/main/res/layout/activity_transaction.xml
+++ b/app/src/main/res/layout/activity_transaction.xml
@@ -14,66 +14,86 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/trans2"
         android:iconifiedByDefault="false"
         android:queryHint="Search" />
 
-    <TextView
-        android:id="@+id/dateTitle"
+    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/trans3"
-        android:gravity="center_horizontal|center_vertical"
-        android:paddingVertical="10dp"
-        android:text="Date"
-        android:textColor="@color/black"
-        android:textSize="15dp" />
+        android:orientation="vertical"
+        android:layout_margin="20dp"
+        app:cardCornerRadius="8dp">
 
+    </androidx.cardview.widget.CardView>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/trans3"
         android:layout_marginHorizontal="20dp"
+
+        android:id="@+id/ll"
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/dateTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginVertical="20dp"
             android:layout_weight="1"
+            android:background="@drawable/trans3"
             android:paddingHorizontal="10dp"
-            android:text="Expenses"
+            android:paddingVertical="10dp"
+            android:text="Date"
+            android:gravity="center_horizontal|center_vertical"
             android:textColor="@color/black"
-            android:textStyle="bold" />
+            android:textSize="15dp" />
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginHorizontal="20dp">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Expenses"
+            android:paddingHorizontal="10dp"
+            android:layout_marginVertical="20dp"
+            android:layout_marginHorizontal="20dp"
+            android:textStyle="bold"
+            android:textColor="@color/black"/>
         <ImageButton
             android:id="@+id/toIncome"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="0.3"
-            android:background="@color/transaction"
-            android:src="@drawable/ic_baseline_next_plan_24" />
+            android:src="@drawable/ic_baseline_next_plan_24"
+            android:background="@color/transaction"/>
 
     </LinearLayout>
+
 
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/expensesRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp" />
+        android:layout_marginHorizontal="20dp"/>
 
 
-    <TextView
-        android:id="@+id/noExpenses"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal|center_vertical"
-        android:text="No expenses available" />
+        <TextView
+            android:id="@+id/noExpenses"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="No expenses available"
+            android:layout_gravity="center_horizontal|center_vertical"/>
 
 
 </LinearLayout>
